app/styles/style.css
/* --- general --- */
.clearfix:after
{
    font-size: 0px;
    content: ".";
    display: block;
    height: 0px;
    visibility: hidden;
    clear: both;
}
body
{
	background: #FFF;
	padding: 0px;
	margin: 0px;
	font-family: 'Arial';
	font-size: 14px;
	color: #444;
}
a
{
	text-decoration: none;
	outline: none;
}
a:hover
{
	text-decoration: underline;
}
a img
{
	display: block;
	transition: opacity 0.3s ease 0s;
	opacity: 1;
	max-width: 100%;
	height: auto;
}
a:hover img
{
	opacity: 0.8;
}
p
{
	padding: 1em 0;
	color: #444;
	line-height: 150%;
}
p.description
{
	font-family: 'Raleway';
	font-size: 16px;
	line-height: 26px;
	padding: 0;
	margin-top: 34px;
}
p.description.t1
{
	font-family: 'Raleway';
	font-size: 14px;
	line-height: 24px;
	margin-top: 24px;
}
p a
{
	color: #7770FF;
	font-weight: 600;
}
strong
{
	color: #000;
}
blockquote
{
	text-align: center;
	font-family: 'Raleway';
	font-size: 16px;
	color: #444;
	line-height: 26px;
}
blockquote:before
{
	display: block;
	font-size: 48px;
	color: #7770FF;
	text-align: left;
	margin-bottom: 10px;
}
pre
{
	font-family: 'Courier new';
    font-size: 14px;
    line-height: 170%;
	background: url('../images/code_background.png') repeat;
	text-shadow: 0 1px 0 #FFF;
	zoom:1;
	filter: dropshadow(color=#ffffff, offx=0, offy=1);
	padding: 0 5px;
	margin: 0;
	overflow: auto;
}
label
{
	color: #25282A;
	font-family: 'Roboto';
}
.relative
{
	position: relative;
}
.responsive
{
	display: block;
	width: 100%;
	height: auto;
}
input, textarea
{
	font-family: 'Raleway';
	border: 1px solid #E2E6E7;
	font-size: 14px;
	line-height: 24px;
	padding: 12px 15px;
	color: #444;
	margin: 0;
}
input[type='number']
{
   appearance: textfield;
	-moz-appearance: textfield;
	-webkit-appearance: textfield;
	-webkit-appearance: none;
}
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button
{
    -webkit-appearance: none;
}
table
{
	width: 100%;
}
table td, table th
{
	padding: 18px 30px;
	font-family: 'Raleway';
	font-size: 14px;
	line-height: 24px;
}
table td, table th
{
	border-left: 1px solid #E2E6E7;
}
table td:first-child, table th:first-child
{
	text-align: right;
	border-left: none;
}
table tr:nth-child(odd)
{
	background: #F5F5F5;
}
.radius
{
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
}
img.radius
{
	max-width: 100%;
}
.float
{
	float: left;
}
.align-center
{
	text-align: center;
}
.align-left
{
	text-align: left;
}
.align-right
{
	text-align: right;
}
.padding-bottom-17
{
	padding-bottom: 17px;
}
.padding-bottom-50
{
	padding-bottom: 50px;
}
.padding-bottom-61
{
	padding-bottom: 61px;
}
.padding-bottom-66
{
	padding-bottom: 66px;
}
.padding-bottom-70
{
	padding-bottom: 70px;
}
.padding-bottom-87
{
	padding-bottom: 87px;
}
.padding-top-7
{
	padding-top: 7px;
}
.padding-top-54
{
	padding-top: 54px;
}
.padding-top-70
{
	padding-top: 70px;
}
.padding-top-bottom-30
{
	padding: 30px 0;
}
.margin-top-0
{
	margin-top: 0 !important;
}
.margin-top-10
{
	margin-top: 10px !important;
}
.margin-top-20
{
	margin-top: 20px;
}
.margin-top-26
{
	margin-top: 26px;
}
.margin-top-30
{
	margin-top: 30px;
}
.margin-top-34
{
	margin-top: 34px !important;
}
.margin-top-40
{
	margin-top: 40px !important;
}
.margin-top-67
{
	margin-top: 67px;
}
.margin-top-70
{
	margin-top: 70px !important;
}
.nounderline,
.nounderline:hover
{
	text-decoration: none;
}
/* --- site container --- */
.site-container
{
	background: #FFF;
}
.site-container.boxed
{
	max-width: 1310px;
	margin-left: auto;
	margin-right: auto;
	box-shadow: 0 0 15px rgba(0, 0, 0, 0.10);
	-moz-box-shadow: 0 0 15px rgba(0, 0, 0, 0.10);
	-webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.10);
}
body.overlay .site-container
{
	position: relative;
	z-index: 2;
}
/* --- headers --- */
h1, h2, h3, h4, h5, h6
{
	font-family: 'Raleway';
	margin: 0;
	padding: 0;
	color: #000;
	font-weight: 600;
	letter-spacing: 1px
}
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
{
	color: #000;
	transition: opacity 0.3s ease 0s;
	opacity: 1;
}
h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover
{
	opacity: 0.6;
	text-decoration: none;
}
h1
{
	font-size: 22px;
	line-height: 34px;
}
h2
{
	font-size: 29px;
	line-height: 40px;
}
h3
{
	font-size: 22px;
	line-height: 34px;
}
h4
{
	font-size: 18px;
	line-height: 28px;
}
h5
{
	font-size: 14px;
	line-height: 24px;
	font-weight: 700;
}
h6
{
	font-size: 15px;
	line-height: 24px;
	font-weight: 500;
	letter-spacing: normal;
}
h2.box-header
{
	text-align: center;
}
h2.box-header.align-left
{
	text-align: left;
}
.box-header:after
{
	display: block;
	content: "";
	background: #7770FF;
	width: 40px;
	height: 2px;
	margin-top: 13px;
}
h2.box-header:after
{
	width: 80px;
	margin-left: auto;
	margin-right: auto;
	margin-top: 20px;
}
h2.box-header.align-left:after
{
	margin-left: 0;
}
h3 .more
{
	margin-left: 50px;
}
h6.box-header
{
	border-bottom: 1px solid #E2E6E7;
}
h6.box-header:after
{
	margin-bottom: -1px;
}
/* --- header --- */
.header-container
{
	padding: 26px 0;
}
.header-top-bar-container
{
	background-color: #F5F5F5;
}
.header-top-bar-container .header-toggle
{
	display: none;
	clear: both;
	text-align: center;
	color: #444;
	padding: 15px 0;
}
.header-top-bar-container .header-toggle:hover
{
	color: #000;
}
.header-top-bar-container .header-toggle
{
	-moz-transform: rotate(180deg);
    -webkit-transform: rotate(180deg);
    -o-transform: rotate(180deg);
    transform: rotate(180deg);
    -ms-filter: fliph;
    filter: fliph;
}
.header-top-bar-container .header-toggle.active
{
	-moz-transform: rotate(0);
    -webkit-transform: rotate(0);
    -o-transform: rotate(0);
    transform: rotate(0);
}
.header-top-bar,
.header
{
	width: 1170px;
	margin-left: auto;
	margin-right: auto;
}
.header .logo
{
	width: 400px;
	/*float: left;*/
}

.header .logo img {
  width: 30px;
  height: auto;
  margin-bottom: -7px;
  margin-right: 7px;
}

.header h1
{
	font-size: 30px;
	font-weight: 500;
	color: #7770FF;
	line-height: 1;
  display: inline-block;
}
/* ... */

